# dev-menu

./: CMakeLists.txt  README.md  dm.sh
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/dev-menu/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  is_number.hpp  menu.cpp  menu.hpp  menu_option.cpp  menu_option.hpp  paths.cpp  paths.hpp  trim.cpp  trim.hpp
tests/: CMakeLists.txt
tests/dev-menu/: CMakeLists.txt  arg_parser_test.cpp  menu_option_test.cpp  menu_test.cpp  trim_test.cpp
